crates/shipper-policy/src/snapshots/shipper_policy__snapshot_tests__snapshot_balanced_all_flags_true.snap
---
source: crates/shipper-policy/src/lib.rs
assertion_line: 573
expression: effects
---
PolicyEffects {
    run_dry_run: false,
    check_ownership: false,
    strict_ownership: false,
    readiness_enabled: true,
}
