crates/shipper-policy/src/snapshots/shipper_policy__snapshot_tests__snapshot_balanced_no_verify.snap
---
source: crates/shipper-policy/src/lib.rs
assertion_line: 561
expression: effects
---
PolicyEffects {
    run_dry_run: false,
    check_ownership: false,
    strict_ownership: false,
    readiness_enabled: true,
}
