crates/shipper-policy/src/snapshots/shipper_policy__snapshot_tests__snapshot_balanced_readiness_disabled.snap
---
source: crates/shipper-policy/src/lib.rs
assertion_line: 567
expression: effects
---
PolicyEffects {
    run_dry_run: true,
    check_ownership: false,
    strict_ownership: false,
    readiness_enabled: false,
}
