crates/shipper-policy/src/snapshots/shipper_policy__snapshot_tests__snapshot_policy_kind_fast.snap
---
source: crates/shipper-policy/src/lib.rs
assertion_line: 610
expression: "PolicyKind::Fast"
---
Fast
