crates/shipper-policy/src/snapshots/shipper_policy__snapshot_tests__snapshot_safe_all_enabled.snap
---
source: crates/shipper-policy/src/lib.rs
assertion_line: 517
expression: effects
---
PolicyEffects {
    run_dry_run: true,
    check_ownership: true,
    strict_ownership: true,
    readiness_enabled: true,
}
